@startuml erd

hide circle

skinparam linetype ortho

Entity User {
    * id
    --
    * name: String
    * email: String
    * phone: String
    * password: String
    * salt: String
}


Entity Ride {
  * id
  --
  * driverID: <<FK>>
  * startLocation: string
  * destination: string
  * price: decimal
  * departure: DateTime
  * maxPassangerCount: Int
  * startLatitude: Double
  * startLongitude: Double
  * destinationLatitude: Double
  * destinationLongitude: Double
  * availableSeats: int
  driverNote: string
  canceled: bool
}

Entity Review {
    * id
    ---
    * userId: <<FK>>
    * authorId: <<FK>>
    * score: int
    reviewText: string
    postedAt: DateTime
}

Entity UserRide {
    * id
    --
    * passangerId: <<FK>>
    * rideId: <<FK>>
    * passangerCount: int
    accepted: bool
    note: string
}


User ||--o{ Ride
User ||--o{ UserRide
User 2--o{ Review
Ride ||--o{ UserRide

@enduml